--- a/package.json
+++ b/package.json
@@ -6,20 +6,42 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "next": "15.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.1"
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@chromatic-com/storybook": "^3.2.3",
+    "@eslint/eslintrc": "^3",
+    "@storybook/addon-essentials": "^8.5.0-beta.3",
+    "@storybook/addon-interactions": "^8.5.0-beta.3",
+    "@storybook/addon-onboarding": "^8.5.0-beta.3",
+    "@storybook/blocks": "^8.5.0-beta.3",
+    "@storybook/nextjs": "^8.5.0-beta.3",
+    "@storybook/react": "^8.5.0-beta.3",
+    "@storybook/test": "^8.5.0-beta.3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "ajv": "^8.17.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.1",
-    "@eslint/eslintrc": "^3"
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-storybook": "^0.11.1",
+    "prettier": "^3.4.2",
+    "storybook": "^8.5.0-beta.3",
+    "typescript": "^5"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
